test/tests/compiler/13_floating-point_numbers/invalid_lex/plx1_no_f32_type.plx
pub fn main(none) i32 {
    f: f32 = 42.43
    return 0
}
